<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="60dp"
        android:minHeight="70dp"
        android:minWidth="60dp"
        android:layout_margin="10dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etSecondName"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:hint="@string/last_name"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:hint="@string/phone_number"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <Button
        android:id="@+id/bChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/choose_ringtone" />

    <Button
        android:id="@+id/bShare"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_by_email" />

</LinearLayout>